fixed spacing issue between intro and biography areas

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,6 +75,7 @@ body {
 
 /* INTRO */
 .intro {
+  margin-bottom: 300px;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: repeat(3, auto);
